Fixing z-index crap

--- a/base.css
+++ b/base.css
@@ -229,6 +229,8 @@ body {
 
 .cover {
   padding: 0 1.5rem;
+  z-index: 10;
+  position: relative;
 }
 .cover-heading {
   font-size: 4rem;
